<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDE2F4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/text_color_activity_second"
            android:text="@string/text_view_name"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:inputType="textPersonName"
            android:hint="@string/edit_text_hint_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/text_color_activity_second"
            android:text="@string/text_view_inn"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:inputType="number"
            android:maxLength="12"
            android:hint="@string/edit_text_hint_inn"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/text_color_activity_second"
            android:text="@string/text_view_codeword"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:inputType="text"
            android:hint="@string/edit_text_hint_codeword"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/text_color_activity_second"
            android:text="@string/text_view_email"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:inputType="textEmailAddress"
            android:hint="@string/edit_text_hint_email"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/text_color_activity_second"
            android:text="@string/text_view_phone"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:inputType="phone"
            android:hint="@string/edit_text_hint_phone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/text_color_activity_second"
            android:text="@string/text_view_password"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:inputType="textPassword"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/text_color_activity_second"
            android:text="@string/text_view_date"/>

        <CalendarView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>